--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,84 @@
-Doctype
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
+    <title>Node JS</title>
+
+    <!-- importing vue -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  </head>
+  <body>
+    <div id="app">
+      <main>
+		  <section class="lis-bg-light">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-12 col-md-10 text-center">
+							<div class="heading pb-4">
+								<h2><h4 class="title">{{sitename}}</h4></h2>
+								<!-- <h5 class="font-weight-normal lis-light">Short Description</h5> -->
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4 wow fadeInUp mb-5 mb-lg-0 text-center"
+							style="visibility: visible; animation-name: fadeInUp;"
+							v-for="(lesson, index) in lessons" :key="index"
+						>
+							<div class="price-table active mb-5">
+								<div class="price-header lis-bg-primary py-4 text-white lis-rounded-top">
+									<h5 class="text-uppercase lis-latter-spacing-2 text-white">Premium</h5>
+									<h1 class="display-4 lis-font-weight-500 text-white"><sup>$</sup> {{lesson.price}} <small>/mo</small></h1>
+									<p class="mb-0">Permium User Membership</p>
+								</div>
+								<div class="border border-top-0 lis-brd-light bg-white py-5 lis-rounded-bottom">
+									<ul class="list-unstyled lis-line-height-3">
+										<h3>Lesson</h3>
+										<li>{{lesson.topic}}</li>
+										<h3>Location</h3>
+										<li>{{lesson.location}}</li>
+									</ul> <button class="btn btn-primary btn-md lis-rounded-circle-50" >Order Now</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+    </div>
+
+    <script>
+      const app = new Vue({
+        el: "#app",
+        data: {
+          sitename: "Displaying Lessons From the Api",
+          lessons: [],
+        },
+        methods: {
+          getLessons: function () {
+            fetch("http://localhost:9000/lessons", {
+              method: "get",
+            })
+              .then((response) => response.json())
+              .then((data) => {
+                console.log(data);
+
+                this.lessons = data;
+              })
+              .catch((error) => {
+                console.log(error);
+              });
+          },
+        },
+        beforeMount() {
+          this.getLessons();
+        },
+      });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
+</html>
